--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "bun run index.ts",
-    "dev": "nodemon --exec bun run index.ts"
+    "dev": "nodemon --exec bun run index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@langchain/openai": "^0.5.8",
