fix: package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transaction-recorder",
-  "module": "index.ts",
+  "module": "module",
   "type": "module",
   "private": true,
   "scripts": {
